== librsvg 2.6.4 ==	

2004-03-25  Dom Lachowicz <cinamod@hotmail.com>	

	* rsvg-styles.c: Memleak was in libcroco and not librsvg. Dodji fixed
	it there, and now we cause SEGVs. Bug 138084
	
2004-03-18  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c: Fix CSS memory leak
	
2004-03-15  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-bpath-util.c: Applied double move fix contributed by ross 
	alexander.
	
2004-03-15  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-css.c: Work around something for jimmac
	
2004-03-11  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: More work on 105316
	
2004-03-07  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Do something for clahey (bug #105316)
	
2004-03-05  Dodji Seketeli  <dodji@gnome.org>

	* rsvg-styles.c: 
	(ccss_property): changed the signature of this function
	to comply with the new signature of CRDocHandler::property()
	in libcroco.

2004-03-04  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am, configure.in, librsvg-2.0-uninstalled.pc.in:
	Add uninstalled pkg-config file.

2004-02-19  Dom Lachowicz <cinamod@hotmail.com>

	* Makefile.am: disable vector text path code for the 2.6 release

2004-02-18  Brian Koebbe  <brian@koebbe.org>

	* rsvg-css.c (rsvg_css_parse_list): fix a loop run amuck (#134801)

2004-02-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* rsvg-gz.c: (rsvg_handle_gz_close_impl):
	  catch read error from gsf_input_read
          break from infinite loops that do not manage to write (#134653)

2004-02-16  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Fix bug #134492
	
2004-02-15  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in, rsvg-styles.c: Fix bug #134292
	
2004-02-14  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Fix bug #133947
	
2004-01-31  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-css.*: Hopefully fix bug #113538
	
2004-01-29  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: bug #132569

2004-01-15  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-css.c: