@@ -1,3 +1,7 @@
+2004-03-28  Caleb Moore <c.moore@student.unsw.edu.au>
+
+	* rsvg-paint-server.c: Fixed linear gradient transformation bug
+
 == librsvg 2.6.4 ==	
 
 2004-03-25  Dom Lachowicz <cinamod@hotmail.com>	
